#!/usr/bin/env python3
"""
ê°„ë‹¨í•œ DLP Mock ì„œë²„
ì‹¤ì œ DistilBERT ì—†ì´ë„ ì‘ë™í•˜ëŠ” í…ŒìŠ¤íŠ¸ìš© ì„œë²„
"""

import json
import logging
import time
import re
from typing import List, Dict, Any
from concurrent import futures
import grpc

# ë¡œê¹… ì„¤ì •
logging.basicConfig(level=logging.INFO)
logger = logging.getLogger(__name__)

class MockDLPServer:
    """Mock DLP ì„œë²„"""
    
    def __init__(self):
        self.model_version = "Mock_v1"
        
        # ê°„ë‹¨í•œ íŒ¨í„´ ë§¤ì¹­ ê·œì¹™
        self.patterns = {
            "personal_info": [
                (r'\d{3}-\d{4}-\d{4}', "ì „í™”ë²ˆí˜¸", 0.9),
                (r'\d{6}-\d{7}', "ì£¼ë¯¼ë“±ë¡ë²ˆí˜¸", 0.95),
                (r'[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}', "ì´ë©”ì¼", 0.9),
                (r'[AM]\d{8,9}', "ì—¬ê¶Œë²ˆí˜¸", 0.85),
            ],
            "financial": [
                (r'\d{4}-\d{4}-\d{4}-\d{4}', "ì¹´ë“œë²ˆí˜¸", 0.9),
                (r'\d{3}-\d{2,4}-\d{6}', "ê³„ì¢Œë²ˆí˜¸", 0.8),
                (r'CVV[:]\s*\d{3,4}', "CVV", 0.95),
            ],
            "auth": [
                (r'ë¹„ë°€ë²ˆí˜¸[:]\s*[^\s]{6,}', "ë¹„ë°€ë²ˆí˜¸", 0.8),
                (r'API[_-]?KEY[:]\s*[a-zA-Z0-9_-]{20,}', "APIí‚¤", 0.9),
                (r'eyJ[a-zA-Z0-9_-]+\.[a-zA-Z0-9_-]+\.[a-zA-Z0-9_-]+', "JWTí† í°", 0.95),
            ],
            "system": [
                (r'\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}', "IPì£¼ì†Œ", 0.8),
                (r':\d{1,5}', "í¬íŠ¸ë²ˆí˜¸", 0.7),
                (r'server[_-]?\d+', "ì„œë²„ëª…", 0.6),
            ]
        }
    
    def detect_sensitive_info(self, text: str, categories: List[str] = None) -> List[Dict]:
        """ë¯¼ê°ì •ë³´ íƒì§€"""
        detections = []
        
        if not categories:
            categories = list(self.patterns.keys())
        
        for category in categories:
            if category not in self.patterns:
                continue
                
            for pattern, sensitive_type, confidence in self.patterns[category]:
                matches = re.finditer(pattern, text)
                
                for match in matches:
                    detection = {
                        "category": category,
                        "type": sensitive_type,
                        "value": match.group(),
                        "start_position": match.start(),
                        "end_position": match.end(),
                        "confidence": confidence,
                        "reasoning": f"íŒ¨í„´ ë§¤ì¹­ìœ¼ë¡œ {sensitive_type} íƒì§€ (ì‹ ë¢°ë„: {confidence:.2f})",
                        "source": "mock"
                    }
                    detections.append(detection)
        
        return detections
    
    def health_check(self) -> Dict:
        """í—¬ìŠ¤ì²´í¬"""
        return {
            "status": "SERVING",
            "message": "Mock DLP Server is healthy",
            "timestamp": int(time.time())
        }

# gRPC ì„œë¹„ìŠ¤ êµ¬í˜„ (ê°„ë‹¨í•œ HTTP ì„œë²„ë¡œ ëŒ€ì²´)
from http.server import HTTPServer, BaseHTTPRequestHandler
import urllib.parse

class DLPHandler(BaseHTTPRequestHandler):
    def __init__(self, *args, **kwargs):
        self.dlp_server = MockDLPServer()
        super().__init__(*args, **kwargs)
    
    def do_POST(self):
        """POST ìš”ì²­ ì²˜ë¦¬"""
        if self.path == '/detect':
            self.handle_detect()
        else:
            self.send_error(404)
    
    def do_GET(self):
        """GET ìš”ì²­ ì²˜ë¦¬"""
        if self.path == '/health':
            self.handle_health()
        else:
            self.send_error(404)
    
    def handle_detect(self):
        """ë¯¼ê°ì •ë³´ íƒì§€ ì²˜ë¦¬"""
        try:
            content_length = int(self.headers['Content-Length'])
            post_data = self.rfile.read(content_length)
            data = json.loads(post_data.decode('utf-8'))
            
            text = data.get('text', '')
            categories = data.get('categories', [])
            
            logger.info(f"ğŸ” ML ëª¨ë¸ í˜¸ì¶œë¨ - í…ìŠ¤íŠ¸: {text[:50]}...")
            logger.info(f"ğŸ“Š ìš”ì²­ ì¹´í…Œê³ ë¦¬: {categories}")
            
            # íƒì§€ ìˆ˜í–‰
            detections = self.dlp_server.detect_sensitive_info(text, categories)
            
            logger.info(f"âœ… íƒì§€ ì™„ë£Œ - {len(detections)}ê°œ ë¯¼ê°ì •ë³´ ë°œê²¬")
            for detection in detections:
                logger.info(f"  - {detection['type']}: {detection['value']} (ì‹ ë¢°ë„: {detection['confidence']:.2f})")
            
            # ì‘ë‹µ ìƒì„±
            response = {
                "detections": detections,
                "confidence_score": max([d["confidence"] for d in detections]) if detections else 0.0,
                "processing_time_ms": 50,  # Mock ì²˜ë¦¬ ì‹œê°„
                "model_version": self.dlp_server.model_version,
                "request_id": f"mock_{int(time.time())}",
                "from_cache": False
            }
            
            self.send_response(200)
            self.send_header('Content-type', 'application/json')
            self.end_headers()
            self.wfile.write(json.dumps(response, ensure_ascii=False).encode('utf-8'))
            
        except Exception as e:
            logger.error(f"Detection error: {e}")
            self.send_error(500)
    
    def handle_health(self):
        """í—¬ìŠ¤ì²´í¬ ì²˜ë¦¬"""
        health = self.dlp_server.health_check()
        
        self.send_response(200)
        self.send_header('Content-type', 'application/json')
        self.end_headers()
        self.wfile.write(json.dumps(health, ensure_ascii=False).encode('utf-8'))
    
    def log_message(self, format, *args):
        """ë¡œê·¸ ë©”ì‹œì§€ ë¬´ì‹œ"""
        pass

def serve():
    """ì„œë²„ ì‹œì‘"""
    server_address = ('0.0.0.0', 50051)
    httpd = HTTPServer(server_address, DLPHandler)
    
    logger.info(f"Mock DLP Server starting on {server_address}")
    try:
        httpd.serve_forever()
    except KeyboardInterrupt:
        logger.info("Shutting down server...")
        httpd.shutdown()

if __name__ == '__main__':
    serve()
