package policy

import (
	"context"
	"fmt"
	"mcp-gateway/internal/policy/config"
	"mcp-gateway/internal/policy/core"
	"mcp-gateway/internal/policy/detection"
	"mcp-gateway/internal/policy/ml/client"
	"mcp-gateway/internal/policy/processing"
	"mcp-gateway/internal/policy/utils"
	"time"
)

// New: ìƒˆë¡œìš´ Policy ì¸ìŠ¤í„´ìŠ¤ ìƒì„±
func New(opts core.Options) *core.Policy {
	return core.New(opts)
}

// DetectSensitiveInfo: ì „ì²´ ë¯¼ê°ì •ë³´ íƒì§€ (HIGH + MEDIUM í™•ì‹¤ì„±)
func DetectSensitiveInfo(text string) []core.SensitiveInfo {
	return detection.DetectSensitiveInfo(text)
}

// DetectSensitiveInfoWithML: ML ëª¨ë¸ì„ í¬í•¨í•œ ë¯¼ê°ì •ë³´ íƒì§€
func DetectSensitiveInfoWithML(text, userID, sessionID, policyID string) ([]core.SensitiveInfo, error) {
	// ML ì„¤ì • ë¡œë“œ (LoadConfig ì‚¬ìš©)
	mlConfig, _, _, _ := config.LoadConfig()
	// Timeoutì„ 60ì´ˆë¡œ ì˜¤ë²„ë¼ì´ë“œ (ML ì¶”ë¡  ì‹œê°„ ê³ ë ¤)
	mlConfig.Timeout = 60 * time.Second
	
	// gRPC í´ë¼ì´ì–¸íŠ¸ ìƒì„±
	grpcClient, err := client.NewGRPCClient(mlConfig)
	if err != nil {
		return nil, err
	}
	
	// ML íƒì§€ê¸° ì´ˆê¸°í™”
	mlDetector := detection.NewMLDetector(grpcClient, nil, nil, true)
	
	// ML ê¸°ë°˜ íƒì§€ ì‹¤í–‰
	result, err := detection.DetectSensitiveInfoWithML(
		context.Background(),
		text,
		userID,
		sessionID,
		policyID,
		mlDetector,
	)
	return result, err
}

// ProcessSensitiveInfo: ë¯¼ê°ì •ë³´ ì²˜ë¦¬ (íƒì§€ + ë§ˆìŠ¤í‚¹) - ML ì„œë²„ ì‚¬ìš©
func ProcessSensitiveInfo(text string) (string, []core.SensitiveInfo) {
	// ML ì„œë²„ë¥¼ ì‚¬ìš©í•œ íƒì§€
	detected, err := DetectSensitiveInfoWithML(text, "system", fmt.Sprintf("session_%d", time.Now().UnixNano()), "default")
	if err != nil {
		// ML ì„œë²„ ì‹¤íŒ¨ ì‹œ ê¸°ë³¸ íƒì§€ ì‚¬ìš©
		detected = DetectSensitiveInfo(text)
	}
	
	maskedText := text
	
	// HIGH í™•ì‹¤ì„± ë¯¼ê°ì •ë³´ë§Œ ë§ˆìŠ¤í‚¹ ì²˜ë¦¬
	for _, info := range detected {
		if info.Level == core.High {
			switch info.Category {
			case core.CategoryPersonalInfo:
				// ê°œì¸ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskPersonalInfo(maskedText)
			case core.CategoryFinancial:
				// ì¬ë¬´/ê²°ì œ ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskFinancialInfo(maskedText)
			case core.CategoryAuth:
				// ì¸ì¦/ë³´ì•ˆ ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskAuthInfo(maskedText)
			case core.CategorySystem:
				// ë‚´ë¶€ ì‹œìŠ¤í…œ ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskSystemInfo(maskedText)
			}
		}
	}
	
	return maskedText, detected
}

// ProcessSensitiveInfoWithLogging: ë¯¼ê°ì •ë³´ ì²˜ë¦¬ + ë¡œê¹… (ì‚¬ìš©ì ì •ë³´ í¬í•¨) - ML ì„œë²„ ì‚¬ìš©
func ProcessSensitiveInfoWithLogging(user, sessionID, text string) (string, []core.SensitiveInfo) {
	// ML ì„œë²„ë¥¼ ì‚¬ìš©í•œ íƒì§€
	detected, err := DetectSensitiveInfoWithML(text, user, sessionID, "default")
	if err != nil {
		// ML ì„œë²„ ì‹¤íŒ¨ ì‹œ ê¸°ë³¸ íƒì§€ ì‚¬ìš©
		detected = DetectSensitiveInfo(text)
	}
	
	maskedText := text
	
	// HIGH í™•ì‹¤ì„± ë¯¼ê°ì •ë³´ë§Œ ë§ˆìŠ¤í‚¹ ì²˜ë¦¬
	for _, info := range detected {
		if info.Level == core.High {
			switch info.Category {
			case core.CategoryPersonalInfo:
				// ê°œì¸ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskPersonalInfo(maskedText)
			case core.CategoryFinancial:
				// ì¬ë¬´/ê²°ì œ ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskFinancialInfo(maskedText)
			case core.CategoryAuth:
				// ì¸ì¦/ë³´ì•ˆ ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskAuthInfo(maskedText)
			case core.CategorySystem:
				// ë‚´ë¶€ ì‹œìŠ¤í…œ ì •ë³´ ë§ˆìŠ¤í‚¹
				maskedText = processing.MaskSystemInfo(maskedText)
			}
		}
	}
	
	// DLP íƒì§€ ê²°ê³¼ ë¡œê¹…
	if len(detected) > 0 {
		utils.LogDLPDetection(user, sessionID, text, maskedText, detected)
		utils.LogDLPSummary(user, sessionID, detected)
	}
	
	return maskedText, detected
}

// GetSensitivitySummary: ë¯¼ê°ì •ë³´ íƒì§€ ê²°ê³¼ ìš”ì•½ (í™•ì‹¤ì„± ìˆ˜ì¤€ë³„)
func GetSensitivitySummary(text string) map[string]interface{} {
	detected := DetectSensitiveInfo(text)
	
	summary := map[string]interface{}{
		"total_count":       len(detected),
		"high_confidence":   0, // ğŸ”´ í™•ì‹¤í•¨ - Regex ì™„ë²½ ì¼ì¹˜ â†’ ì¦‰ì‹œ ë§ˆìŠ¤í‚¹/ì°¨ë‹¨ â†’ ëª¨ë¸ X
		"medium_confidence": 0, // ğŸŸ  íŒë‹¨ í•„ìš” - Regex ìœ ì‚¬ íŒ¨í„´/í‚¤ì›Œë“œ í¬í•¨ â†’ DLP ëª¨ë¸ í˜¸ì¶œ â†’ ì¶”ê°€ íŒë‹¨
		"low_confidence":    0, // ğŸŸ¢ ì•ˆì „í•¨ - Regex ë¶ˆì¼ì¹˜/ë¯¼ê°ì •ë³´ ê´€ë ¨ ì—†ìŒ â†’ ê·¸ëŒ€ë¡œ í†µê³¼ â†’ ëª¨ë¸ X
		"categories":        make(map[string]int),
		"details":           detected,
	}
	
	for _, info := range detected {
		// í™•ì‹¤ì„± ìˆ˜ì¤€ë³„ ì¹´ìš´íŠ¸
		switch info.Level {
		case core.High:
			summary["high_confidence"] = summary["high_confidence"].(int) + 1
		case core.Medium:
			summary["medium_confidence"] = summary["medium_confidence"].(int) + 1
		case core.Low:
			summary["low_confidence"] = summary["low_confidence"].(int) + 1
		}
		
		// ì¹´í…Œê³ ë¦¬ë³„ ì¹´ìš´íŠ¸
		categories := summary["categories"].(map[string]int)
		categories[string(info.Category)]++
	}
	
	return summary
}
